# template-python-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
scripts/: format.sh  lint.sh  test.sh
tests/: test_main.py
