[tool.poetry]
name = "template-python-app"
version = "0.1.0"
description = ""
authors = ["nukopy <nukopy@gmail.com>"]
readme = "README.md"
# packages = [{include = "template-python-app", from = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ruff = "^0.0.272"
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) and isort (`I`) checks.
select = ["E", "F", "I"]
line-length = 88

# Target directories
src = ["app", "tests"]
